--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 == before next release ==
 - installer
+  - welcome
+  - database config
+  - administrator user
+  - system settings
 - create new user page
 - check forgot password works
 - event custom validator ( more attend than max attends )
