--- a/TODO.txt
+++ b/TODO.txt
@@ -25,6 +25,7 @@
 - doctrine migrations
 
 == todo ==
+- member of a location will also be member to child locations
 - merge users
 - remember to set a subscription to inactive when no more tickets
 - improve the way to recalc users of group
