--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
 == before next release ==
+- remove the remember button
 - cannot save user as admin without change language
 - installer
   - welcome
   - database config
   - administrator user
   - system settings
-- create new user page
 - event custom validator ( more attend than max attends )
 - rewrite default settings for language and accounts
 - change location
@@ -18,6 +18,7 @@
 - add pager to ledger
 - add pager to order
 - add search to order
+- style create new user page
 - style product page
 - style product listing
 - put images on links
