--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -7,6 +7,8 @@
 - make sure filter actually works and filter users correct
 
 == todo ==
+- save user search filters
+- find a way we can reuse numbers (users without subscription with number above X), optional, (set member_number high after 2 years without subscription)
 - add 365 date icons
 - fix layout, single and double column
 - configurable sender email
@@ -22,9 +24,9 @@
 - improve the way to recalc users of group
 - translation
 - Obey lifetime membership
+- make sure we can keep track of auto renewal subscriptions
 - make a quick search field for users
-- users should be able to disable types of email
-  - types (password,info)
+- users should be able to disable types of email (password,info)
 - users should be able to add and remove address, email and phone
   - this will not work with our currently validation.. consider to remove this funcationality from the admin part
 - find a way to make company users
