--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -1,7 +1,10 @@
 == before next release ==
+- when adding locations, has to be a child of ClubMaster
+- check permissions in installer script
 - installer
   - administrator user
   - location settings
+- find a way to create a default value
 - make sure filter actually works and filter users correct
 
 == todo ==
@@ -15,6 +18,7 @@
 - add batch to user list
 - add search to order
 - member of a location will also be member to child locations
+- settings from parent locations applies to locations without settings
 - merge users
 - remember to set a subscription to inactive when no more tickets
 - improve the way to recalc users of group
