--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -3,6 +3,7 @@
 - make sure filter actually works and filter users correct
 
 == todo ==
+- remove link to change location if only 2 locations in the system
 - make infinive parent loop in location configs
 - review the entire location overview, is it easy to understand by the user (config, parent and child)
 - add config keys for locations
