--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -1,25 +1,31 @@
-== todo ==
+== scheduled for beta2 ==
 - add config keys for locations
 - make sure filter actually works and filter users correct
 - make sure nobody can access the installer after install
+- remove link to change location if only 2 locations in the system
+- add 365 date icons
+- configurable sender email
+- add batch to user list
+- rewrite prePersist to PrePersist?? Will this work?
+- rewrite form.factory to $this->createForm()
+- add some more test data
+- add some lorem ipsum data
+
+
+== todo ==
 - save user search filters
 - find a way we can reuse numbers (users without subscription with number above X), optional, (set member_number high after 2 years without subscription)
 - obey rules of club_user_currency
-- remove link to change location if only 2 locations in the system
 - make infinive parent loop in location configs
 - review the entire location overview, is it easy to understand by the user (config, parent and child)
 - on location config better widgets
-- add 365 date icons
 - fix layout, single and double column
-- configurable sender email
 - add filter items (name, member_number)
 - find out the syntax for member_numbers
 - add images to products
 - sort user lists
-- add batch to user list
 - add search to order
 - member of a location will also be member to child locations
-- settings from parent locations applies to locations without settings
 - merge users
 - remember to set a subscription to inactive when no more tickets
 - improve the way to recalc users of group
@@ -53,8 +59,6 @@
 - success / failure handler has to be more dynamic (might wait for a symfony upgrade) (symfony 2.1)
 - on success handler, consider forward and not redirect response?
 - remove all names from route, and use defaults
-- rewrite prePersist to PrePersist?? Will this work?
-- rewrite form.factory to $this->createForm()
 
 == graphics ==
 - event calendar view
@@ -62,10 +66,6 @@
 - make sure all pages are html validated
 - make sure css are validated
 - if twig has no date, it prints current timestamp (tasks last run at)
-
-== tests data ==
-- add some more test data
-- add some lorem ipsum data
 
 == security ==
 - cannot edit orders that you do not own
