--- a/src/Club/README
+++ b/src/Club/README
@@ -2,8 +2,8 @@ ClubMaster
 ==========
 :Author:    Michael Holm Kristensen
 :Email:     <hollo@hollo.dk>
-:Date:      2011-06-29
-:Revision:  1
+:Date:      2011-06-30
+:Revision:  2
 
 
 Feedback
@@ -32,7 +32,7 @@ Prerequirements
 In order to run this software you need to following prerequirements:
 
 - Webserver
-- PHP
+- PHP 5.3.2
 - MySQL 5
 
 When you have this up and running, you can check the following page for other requirements:
