Appended version number in design.

--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -1,6 +1,6 @@
 == todo ==
-- should be able to add products to the cart without having an address
-- make it clear that PHP 5.3.2 is a requirement, make a check in the installer
+- append the version number in the design dynamic
+- improve checkout procedure, change customer, delivery and billing address.
 - manual steps for install clubmaster
 - gettings warnings when sending mails
 - different login pages for different locations
