--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -2,6 +2,7 @@
 - validate we can write in email spool path folder
 
 == todo ==
+- make sure not all details from logview is viewable if the user is not admin
 - javascript confirms
 - flash on set subscription on pause
 - consider if you should be able to delete users
