--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -2,11 +2,13 @@
 - javascript confirms
 - obey rules of club_user_currency
 - Obey lifetime membership
-- make sure we can keep track of auto renewal subscriptions, just create a new order
 - add icon to pause, resume and expire
 - make sure the firewall actually does work
 
 == todo ==
+- orders should contain a list of unhandled orders
+- make sure we can keep track of users payments (debs or credit)
+- add products to different account numbers
 - test all combinations of subscriptions:
 - add attends to events in test data
 - subscriptions has to have at least:
@@ -59,7 +61,6 @@
 - event agenda view
 - make sure html are validated
 - make sure css are validated
-- if twig has no date, it prints current timestamp (tasks last run at)
 
 == modules ==
 - mailer bundle
