Improved forms on ProductAttributes.

--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -1,7 +1,7 @@
 == scheduled for beta5 ==
 - review the entire location overview, is it easy to understand by the user (config, parent and child)
 - make a quick search field for users
-- better widgets for product attributes
+- redo ExpireData with ExpireDate
 
 == todo ==
 - include product offers
