--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -2,6 +2,8 @@
 - review the entire location overview, is it easy to understand by the user (config, parent and child)
 - make a quick search field for users
 - redo ExpireData with ExpireDate
+- style product attributes form
+- make StartDate and ExpireDate as DateTime objects, obey in subscriptions
 
 == todo ==
 - include product offers
