--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -1,6 +1,7 @@
 == scheduled for beta5 ==
 - View the current settings for each location, but make sure people can see if its own or a parents config
 - Better widgets for te location config
+- default VAT account is failed
 - make a quick search field for users
 - redo ExpireData with ExpireDate
 
