--- a/src/Club/TODO.txt
+++ b/src/Club/TODO.txt
@@ -1,9 +1,7 @@
 == scheduled for beta5 ==
-- View the current settings for each location, but make sure people can see if its own or a parents config
-- Better widgets for te location config
-- default VAT account is failed
 - make a quick search field for users
 - redo ExpireData with ExpireDate
+- default VAT account is failed
 
 == scheduled for beta6 ==
 - icon on account -> ledger
@@ -12,6 +10,8 @@
 - member of a location will also be member to child locations
 
 == todo ==
+- email on order change
+- seems like once in a while newtransactionlistener is called eventho you are not logged in (results in no location error)
 - include product offers
 - find out what it takes to not require index.php/
 - custom signup fields
